--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <dependency>
       <groupId>org.telegram</groupId>
       <artifactId>telegrambots</artifactId>
-      <version>3.6</version>
+      <version>3.5</version>
     </dependency>
 
   </dependencies>
@@ -76,28 +76,14 @@
         </plugin>
 
         <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>appassembler-maven-plugin</artifactId>
-          <version>2.0.0</version>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>3.1.0</version>
           <configuration>
-            <assembleDirectory>target</assembleDirectory>
-
-            <programs>
-              <program>
-                <mainClass>com.telegram.api.App</mainClass>
-                <name>bot</name>
-              </program>
-            </programs>
-
+            <archive>
+              <manifestFile>src/main/webapp/WEB-INF/META-INF/MANIFEST.MF</manifestFile>
+            </archive>
           </configuration>
-          <executions>
-            <execution>
-              <phase>package</phase>
-              <goals>
-                <goal>assemble</goal>
-              </goals>
-            </execution>
-          </executions>
         </plugin>
 
       </plugins>
