--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,10 @@
           <version>3.1.0</version>
           <configuration>
             <archive>
-              <manifestFile>src/main/webapp/WEB-INF/META-INF/MANIFEST.MF</manifestFile>
+              <manifest>
+                <addClasspath>true</addClasspath>
+                <mainClass>com.telegram.api.App</mainClass>
+              </manifest>
             </archive>
           </configuration>
         </plugin>
