--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
   <artifactId>bot</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
-
   <name>bot</name>
 
   <properties>
@@ -18,7 +17,6 @@
   </properties>
 
   <dependencies>
-
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -31,14 +29,12 @@
       <artifactId>telegrambots</artifactId>
       <version>3.6.1</version>
     </dependency>
-
   </dependencies>
 
   <build>
     <finalName>bot</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
-
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.0.0</version>
@@ -75,6 +71,24 @@
           <version>2.8.2</version>
         </plugin>
 
+        <!-- <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>3.1.1</version>
+          <executions>
+            <execution>
+              <id>copy-dependencies</id>
+              <phase>prepare-package</phase>
+              <goals>
+                <goal>copy-dependencies</goal>
+              </goals>
+              <configuration>
+                <outputDirectory>${project.build.directory}/libs</outputDirectory>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
@@ -83,26 +97,33 @@
             <archive>
               <manifest>
                 <addClasspath>true</addClasspath>
+                <classpathPrefix>libs/</classpathPrefix>
                 <mainClass>com.telegram.api.App</mainClass>
               </manifest>
             </archive>
           </configuration>
-        </plugin>
+        </plugin> -->
 
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-dependency-plugin</artifactId>
-          <version>3.1.1</version>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <configuration>
+            <archive>
+              <manifest>
+                <addClasspath>true</addClasspath>
+                <mainClass>com.telegram.api.App</mainClass>
+              </manifest>
+            </archive>
+            <descriptorRefs>
+              <descriptorRef>jar-with-dependencies</descriptorRef>
+            </descriptorRefs>
+          </configuration>
           <executions>
             <execution>
-              <id>copy-dependencies</id>
-              <phase>package</phase>
+              <id>make-assembly</id> <!-- this is used for inheritance merges -->
+              <phase>package</phase> <!-- bind to the packaging phase -->
               <goals>
-                <goal>copy-dependencies</goal>
+                <goal>single</goal>
               </goals>
-              <configuration>
-                <outputDirectory>${project.build.directory}/</outputDirectory>
-              </configuration>
             </execution>
           </executions>
         </plugin>
